--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,7 @@ p {
 .footer {
     position: relative;
     bottom: 0;
-    width: !important 100%;
+    width: 100% !important;
     padding: 40px;
     background-color: var(--second-bg-color);
 }
