commented out testimonials section temporarily

--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,6 @@ p {
 
 .testimonials {
     background: var(--second-bg-color);
-    width: 100% !important;
 }
 
 .testimonials-box {
@@ -631,6 +630,10 @@ p {
 
 .testimonials .heading {
     margin-bottom: 5rem;
+}
+
+.testimonials p {
+    color: white;
 }
 
 .testimonials-box img {
@@ -669,7 +672,7 @@ p {
     justify-content: center;
     text-align: center;
     gap: 1.5rem;
-    color: white;
+    color: white !important;
     transition: 0.4s ease-in-out;
     -webkit-transition: 0.4s ease-in-out;
     -moz-transition: 0.4s ease-in-out;
