--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,7 @@ span {
 .timeline-items::before {
     content: "";
     position: absolute;
+    top: 5px;
     width: 5px;
     height: 100%;
     background-color: var(--main-color);
