--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ span {
     width: 5px;
     height: 100%;
     background-color: var(--main-color);
-    left: calc(50% - 1px);
+    left: calc(50% * -2px);
 }
 
 .timeline-item {
