--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ span {
     -moz-transform: scale(1.05);
     -ms-transform: scale(1.05);
     -o-transform: scale(1.05);
-    box-shadow: 0 0 50px #00d57e;
+    box-shadow: 0 0 25px var(--main-color);
 }
 
 .btn-group {
@@ -248,14 +248,14 @@ span {
 
 .btn-group a:nth-of-type(2) {
     background-color: var(--bg-color);
-    color: #00d57e;
-    border: 2px solid #00d57e;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
     box-shadow: 0 0 25px transparent;
 }
 
 .btn-group a:nth-of-type(2):hover {
-    box-shadow: 0 0 25px #00d57e;
-    background-color: #00d57e;
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
     color: black;
 }
 
