--- a/css/style.css
+++ b/css/style.css
@@ -512,103 +512,48 @@ p {
 
 /* Card Components */
 
-.container {
+.grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
 }
 
-.card {
-    margin: 0 2rem;
-    background-color: var(--bg-color);
-    border-radius: 10px;
-    box-shadow: 0 0 10px var(--main-color);
-    overflow: hidden;
-    color: white;
-    margin-bottom: 5rem;
-    gap: 1.5rem;
-    transition: 0.4s ease-in-out;
-    -webkit-transition: 0.4s ease-in-out;
-    -moz-transition: 0.4s ease-in-out;
-    -ms-transition: 0.4s ease-in-out;
-    -o-transition: 0.4s ease-in-out;
-}
-
-.card:hover {
-    border: 3px solid var(--main-color);
-    transform: translateY(-10px)scale(1.03);
-    -webkit-transform: translateY(-10px)scale(1.03);
-    -moz-transform: translateY(-10px)scale(1.03);
-    -ms-transform: translateY(-10px)scale(1.03);
-    -o-transform: translateY(-10px)scale(1.03);
-    box-shadow: 0 0 50px var(--main-color);
-}
-
-.card-header img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-.card-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+.portfolio-item {
+    background-color:  var(--bg-color);
     padding: 20px;
-    min-height: 250px;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
 }
 
-.card-body h3 {
-    font-size: 20px;
-    color: white;
-    margin: 0 0 10px;
-    font-weight: 500;
+.portfolio-item:hover {
+    transform: translateY(-5px);
 }
 
-.tag {
-    background: #cccccc;
-    border-radius: 50px;
-    font-size: 12px;
-    margin-bottom: 20px;
+.figure {
+    margin: 0;
+}
+
+.figure img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px 5px 0 0;
+}
+
+figure:hover {
+    transform: scale(1.05);
+    cursor: pointer !important;
+  }
+
+
+
+figcaption {
+    font-size: 30px;
     color: #fff;
-    padding: 2px 10px;
-    text-transform: uppercase;
-    cursor: pointer;
-}
+    transition: transform 0.3s ease;
+  }
 
-.tag-blue {
-    background-color: var(--main-color);
-    color: black;
-}
 
-.tag-purple {
-    background-color: #805eed;
-    color: black;
-}
-
-.tag-green {
-    background-color: #00d57e;
-    color: black;
-}
-
-.card-body p {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 22px;
-    color: white !important;
-}
-
-.card-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-}
-
-.card-footer .code-link {
-    margin-top: 20px;
-}
+  
 
 /* card compnents end*/
 
