--- a/css/style.css
+++ b/css/style.css
@@ -909,4 +909,10 @@ figcaption {
     .work .container {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .portfolio-item {
+        display: block;
+        width: 100%;
+        margin-bottom: 20px;
+      }
 }
