--- a/css/style.css
+++ b/css/style.css
@@ -911,8 +911,6 @@ figcaption {
     }
 
     .portfolio-item {
-        display: block;
-        width: 100%;
-        margin-bottom: 20px;
+        grid-template-columns: repeat(1, 1fr);
       }
 }
