--- a/css/style.css
+++ b/css/style.css
@@ -512,14 +512,15 @@ p {
 
 /* Card Components */
 
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    gap: 3rem;
 }
 
 .portfolio-item {
-    background-color:  var(--bg-color);
+    background-color: var(--bg-color);
     padding: 20px;
     border-radius: 5px;
     transition: transform 0.3s ease;
@@ -531,6 +532,11 @@ p {
 
 .figure {
     margin: 0;
+    transition: transform 0.3s ease;
+}
+.figure:hover{
+    transform: scale(1.05);
+    cursor: pointer;
 }
 
 .figure img {
@@ -539,21 +545,15 @@ p {
     border-radius: 5px 5px 0 0;
 }
 
-figure:hover {
-    transform: scale(1.05);
-    cursor: pointer !important;
-  }
+.figcaption h3 {
+    margin-bottom: 10px;
+    color: #333;
+}
 
-
-
-figcaption {
-    font-size: 30px;
-    color: #fff;
-    transition: transform 0.3s ease;
-  }
-
-
-  
+.figcaption p {
+    font-size: 14px;
+    color: #666;
+}
 
 /* card compnents end*/
 
@@ -906,15 +906,24 @@ figcaption {
         font-size: 4rem !important;
     }
 
-    .work .container {
-        grid-template-columns: repeat(1, 1fr);
+    .grid-container {
+        grid-template-columns: 1fr;
     }
-    .work .grid-container .portfolio-item {
-        grid-template-columns: repeat(1, 1fr);
-        overflow-x: hidden;
-    }
-}
 
-@media screen and (max-width: 768px) {
-   
+    .portfolio-item {
+        width: 100%;
+        margin: 0 0 20px;
+    }
+
+    .figure {
+        margin: 0 0 20px;
+    }
+
+    /* .work .grid-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .work .grid-container .portfolio-item{
+        width: 100%;
+        overflow-x: hidden;
+    } */
 }
