--- a/css/style.css
+++ b/css/style.css
@@ -907,7 +907,7 @@ p {
     }
 
     .grid-container {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, 1fr);
     }
 
     .portfolio-item {
