--- a/css/style.css
+++ b/css/style.css
@@ -512,19 +512,23 @@ p {
 
 /* Card Components */
 
+/* .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+} */
 
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+   display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 3rem;
 }
 
 .portfolio-item {
-    background-color: var(--bg-color);
+    background-color: #f4f4f4;
     padding: 20px;
     border-radius: 5px;
     transition: transform 0.3s ease;
-    max-width: calc(50vw - 40px);
 }
 
 .portfolio-item:hover {
@@ -908,19 +912,15 @@ p {
     }
 
     .grid-container {
-        grid-template-columns: 1fr;
-    }
+         grid-template-columns: repeat(1, 1fr);
+     }
 
     .portfolio-item {
+        padding: 0px;
+}
+
+    .figure img {
         width: 100%;
-        margin: 5px;
-    }
-
-    .figure {
-        margin: 5px;
-    }
-
-    .figure img{
-        width: 90%;
+        height: auto;
     }
 }
