--- a/css/style.css
+++ b/css/style.css
@@ -512,52 +512,102 @@ p {
 
 /* Card Components */
 
-/* .container {
+.container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 3rem;
-} */
-
-.grid-container {
-   display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
 }
 
-.portfolio-item {
-    background-color: #f4f4f4;
+.card {
+    margin: 0 2rem;
+    background-color: var(--bg-color);
+    border-radius: 10px;
+    box-shadow: 0 0 10px var(--main-color);
+    overflow: hidden;
+    color: white;
+    margin-bottom: 5rem;
+    gap: 1.5rem;
+    transition: 0.4s ease-in-out;
+    -webkit-transition: 0.4s ease-in-out;
+    -moz-transition: 0.4s ease-in-out;
+    -ms-transition: 0.4s ease-in-out;
+    -o-transition: 0.4s ease-in-out;
+}
+
+.card:hover {
+    border: 3px solid var(--main-color);
+    transform: translateY(-10px)scale(1.03);
+    -webkit-transform: translateY(-10px)scale(1.03);
+    -moz-transform: translateY(-10px)scale(1.03);
+    -ms-transform: translateY(-10px)scale(1.03);
+    -o-transform: translateY(-10px)scale(1.03);
+    box-shadow: 0 0 50px var(--main-color);
+}
+
+.card-header img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     padding: 20px;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
+    min-height: 250px;
 }
 
-.portfolio-item:hover {
-    transform: translateY(-5px);
+.card-body h3 {
+    font-size: 20px;
+    color: white;
+    margin: 0 0 10px;
+    font-weight: 500;
 }
 
-.figure {
-    margin: 0;
-    transition: transform 0.3s ease;
-}
-.figure:hover{
-    transform: scale(1.05);
+.tag {
+    background: #cccccc;
+    border-radius: 50px;
+    font-size: 12px;
+    margin-bottom: 20px;
+    color: #fff;
+    padding: 2px 10px;
+    text-transform: uppercase;
     cursor: pointer;
 }
 
-.figure img {
-    width: 100%;
-    height: auto;
-    border-radius: 5px 5px 0 0;
+.tag-blue {
+    background-color: var(--main-color);
+    color: black;
 }
 
-.figcaption h3 {
-    margin-bottom: 10px;
-    color: #333;
+.tag-purple {
+    background-color: #805eed;
+    color: black;
 }
 
-.figcaption p {
-    font-size: 14px;
-    color: #666;
+.tag-green {
+    background-color: #00d57e;
+    color: black;
+}
+
+.card-body p {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 22px;
+    color: white !important;
+}
+
+.card-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.card-footer .code-link {
+    margin-top: 20px;
 }
 
 /* card compnents end*/
@@ -911,16 +961,7 @@ p {
         font-size: 4rem !important;
     }
 
-    .grid-container {
-         grid-template-columns: repeat(1, 1fr);
-     }
-
-    .portfolio-item {
-        padding: 0px;
-}
-
-    .figure img {
-        width: 100%;
-        height: auto;
+    .work .container {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
