updated background color and index pagge

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 :root {
-    --bg-color: #2B2E34;
+    --bg-color: #141925;
     --second-bg-color: #35383f;
     --text-color: white;
     --main-color: #1EB5F2;
