updated css background colors

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 :root {
     --bg-color: #141925;
-    --second-bg-color: #35383f;
+    --second-bg-color: #1e2430;
     --text-color: white;
     --main-color: #1EB5F2;
 }
